tests/ui/const-generics/const-param-type-depends-on-type-param.full.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/const-param-type-depends-on-type-param.rs:11:34
   |
LL | pub struct Dependent<T, const X: T>([(); X]);
   |                                  ^ the type must not depend on the parameter `T`
   |
   = note: type parameters may not be used in the type of const parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0770`.
